--- a/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
+++ b/AplicacionDeGestion/vistas/CrearModificarVehiculoFormulario.xaml
@@ -10,14 +10,20 @@
         xmlns:syncfusion="http://schemas.syncfusion.com/wpf"
         Title="Vehículo formulario" Height="450" Width="600" ShowInTaskbar="False" ResizeMode="NoResize" Icon="../assets/Icons/añadirVehiculo.ico">
     <Window.Resources>
-        <proyecto:MarcaConverter x:Key="marcaConverter"></proyecto:MarcaConverter>
         <Style TargetType="{x:Type Button}">
             <Setter Property="Margin" Value="5"></Setter>
             <Setter Property="Width" Value="90"></Setter>
             <Setter Property="Height" Value="25"></Setter>
             <Setter Property="VerticalAlignment" Value="Bottom"></Setter>
             <Setter Property="Template" Value="{DynamicResource ButtonControlTemplate1}"></Setter>
-            
+        </Style>
+        <Style TargetType="{x:Type TextBox}" x:Key="IdClienteTextBox">
+            <Setter Property="IsReadOnly" Value="True"></Setter>
+            <Style.Triggers>
+                <DataTrigger Binding="{Binding Cliente}" Value="{x:Null}">
+                    <Setter Property="IsReadOnly" Value="False"></Setter>
+                </DataTrigger>
+            </Style.Triggers>
         </Style>
     </Window.Resources> 
    
@@ -45,7 +51,7 @@
         <StackPanel>
             <inputLayout:SfTextInputLayout Margin="15,15,15,0" Hint="Id del cliente"                                      
                                        HintFloatMode="Float">
-                <TextBox Text="{Binding Path=Vehiculo.IdCliente}"></TextBox>
+                <TextBox Style="{StaticResource IdClienteTextBox}" Text="{Binding Path=Vehiculo.IdCliente}"></TextBox>
             </inputLayout:SfTextInputLayout>
             <inputLayout:SfTextInputLayout Margin="15,0" Hint="Matrícula"                                      
                                        HintFloatMode="Float">
@@ -75,8 +81,7 @@
             <StackPanel Orientation="Horizontal" Margin="15,0">
                 <inputLayout:SfTextInputLayout Hint="Tipo"
                                        HintFloatMode="Float">
-                    <ComboBox Width="120" ItemsSource="{Binding ListaTipoVehiculos}" SelectedItem="{Binding TipoVehiculoSeleccionado}" Text="{Binding Path=ListaTipoVehiculos}">
-                    </ComboBox>
+                    <ComboBox Width="120" ItemsSource="{Binding ListaTipoVehiculos}" SelectedItem="{Binding Vehiculo.Tipo}"></ComboBox>
                 </inputLayout:SfTextInputLayout>
             </StackPanel>
         </StackPanel>
